// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT.LocationDetailView should have expected keys 1`] = `
{
  "getListResultsMessage": [Function],
  "searchExhaustedMessage": "Showing results for up to the first 10,000 items",
  "searchIncludeSubfoldersLabel": "Include subfolders",
  "searchPlaceholder": "Search current folder",
  "searchSubmitLabel": "Search",
  "tableColumnLastModifiedHeader": "Last modified",
  "tableColumnNameHeader": "Name",
  "tableColumnSizeHeader": "Size",
  "tableColumnTypeHeader": "Type",
  "title": [Function],
}
`;

exports[`DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT.LocationsView should match snapshot 1`] = `
{
  "getListResultsMessage": [Function],
  "searchPlaceholder": "Filter files and folders",
  "searchSubmitLabel": "Search",
  "tableColumnBucketHeader": "Bucket",
  "tableColumnFolderHeader": "Folder",
  "tableColumnPermissionsHeader": "Permissions",
  "title": "Home",
}
`;

exports[`DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT.UploadView should match snapshot 1`] = `
{
  "actionCancelLabel": "Cancel",
  "actionDestinationLabel": "Destination",
  "actionExitLabel": "Exit",
  "actionStartLabel": "Upload",
  "addFilesLabel": "Add files",
  "addFolderLabel": "Add folder",
  "getActionCompleteMessage": [Function],
  "overwriteExistingLabel": "Overwrite existing files",
  "statusDisplayCanceledLabel": "Canceled",
  "statusDisplayCompletedLabel": "Completed",
  "statusDisplayFailedLabel": "Failed",
  "statusDisplayOverridePreventedLabel": "Overwrite prevented",
  "statusDisplayQueuedLabel": "Not Started",
  "statusDisplayTotalLabel": "Total",
  "tableColumnCancelHeader": "",
  "tableColumnFolderHeader": "Folder",
  "tableColumnNameHeader": "Name",
  "tableColumnSizeHeader": "Size",
  "tableColumnStatusHeader": "Status",
  "tableColumnTypeHeader": "Type",
  "title": "Upload",
}
`;

exports[`DEFAULT_STORAGE_BROWSER_DISPLAY_TEXT should match snapshot 1`] = `
{
  "LocationDetailView": {
    "getListResultsMessage": [Function],
    "searchExhaustedMessage": "Showing results for up to the first 10,000 items",
    "searchIncludeSubfoldersLabel": "Include subfolders",
    "searchPlaceholder": "Search current folder",
    "searchSubmitLabel": "Search",
    "tableColumnLastModifiedHeader": "Last modified",
    "tableColumnNameHeader": "Name",
    "tableColumnSizeHeader": "Size",
    "tableColumnTypeHeader": "Type",
    "title": [Function],
  },
  "LocationsView": {
    "getListResultsMessage": [Function],
    "searchPlaceholder": "Filter files and folders",
    "searchSubmitLabel": "Search",
    "tableColumnBucketHeader": "Bucket",
    "tableColumnFolderHeader": "Folder",
    "tableColumnPermissionsHeader": "Permissions",
    "title": "Home",
  },
  "UploadView": {
    "actionCancelLabel": "Cancel",
    "actionDestinationLabel": "Destination",
    "actionExitLabel": "Exit",
    "actionStartLabel": "Upload",
    "addFilesLabel": "Add files",
    "addFolderLabel": "Add folder",
    "getActionCompleteMessage": [Function],
    "overwriteExistingLabel": "Overwrite existing files",
    "statusDisplayCanceledLabel": "Canceled",
    "statusDisplayCompletedLabel": "Completed",
    "statusDisplayFailedLabel": "Failed",
    "statusDisplayOverridePreventedLabel": "Overwrite prevented",
    "statusDisplayQueuedLabel": "Not Started",
    "statusDisplayTotalLabel": "Total",
    "tableColumnCancelHeader": "",
    "tableColumnFolderHeader": "Folder",
    "tableColumnNameHeader": "Name",
    "tableColumnSizeHeader": "Size",
    "tableColumnStatusHeader": "Status",
    "tableColumnTypeHeader": "Type",
    "title": "Upload",
  },
}
`;
